--- a/k8s/goviolin-ingress.yaml
+++ b/k8s/goviolin-ingress.yaml
@@ -1,4 +1,4 @@
-# Not needed for minikube
+# ***************************Not needed for minikube******************************************
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
